--- a/reports/eda-umaserie.Rmd
+++ b/reports/eda-umaserie.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "EDA Séries"
 output:
-  html_notebook:
-    toc: yes
-    toc_float: yes
   html_document:
     df_print: paged
+    toc: yes
+    toc_float: yes
+  html_notebook:
     toc: yes
     toc_float: yes
 ---
@@ -37,6 +37,24 @@ bh = episodes %>% filter(series_name == "BoJack Horseman")
 pb = episodes %>% filter(series_name == "Prison Break")
 vk = episodes %>% filter(series_name == "Vikings")
 
+bh_1 = bh %>% filter(season == 1)
+bh_2 = bh %>% filter(season == 2)
+bh_3 = bh %>% filter(season == 3)
+bh_4 = bh %>% filter(season == 4)
+bh_5 = bh %>% filter(season == 5)
+
+pb_1 = pb %>% filter(season == 1)
+pb_2 = pb %>% filter(season == 2)
+pb_3 = pb %>% filter(season == 3)
+pb_4 = pb %>% filter(season == 4)
+pb_5 = pb %>% filter(season == 5)
+
+vk_1 = vk %>% filter(season == 1)
+vk_2 = vk %>% filter(season == 2)
+vk_3 = vk %>% filter(season == 3)
+vk_4 = vk %>% filter(season == 4)
+vk_5 = vk %>% filter(season == 5)
+
 episodes_min = data.frame(matrix(
     c("BoJack Horseman", bh$season[match(min(bh$UserRating), bh$UserRating)], min(bh$UserRating), 
       "Prison Break",    pb$season[match(min(pb$UserRating), pb$UserRating)], min(pb$UserRating),
@@ -44,6 +62,27 @@ episodes_min = data.frame(matrix(
     ncol = 3, 
     byrow = TRUE))
 colnames(episodes_min) = c("series_name", "season", "UserRating")
+
+
+episodes_final = data.frame(matrix(
+    c("BoJack Horseman", 1, bh_1$UserRating[match(max(bh_1$series_ep), bh_1$series_ep)], median(bh_1$UserRating),
+      "BoJack Horseman", 2, bh_2$UserRating[match(max(bh_2$series_ep), bh_2$series_ep)], median(bh_2$UserRating),
+      "BoJack Horseman", 3, bh_3$UserRating[match(max(bh_3$series_ep), bh_3$series_ep)], median(bh_3$UserRating),
+      "BoJack Horseman", 4, bh_4$UserRating[match(max(bh_4$series_ep), bh_4$series_ep)], median(bh_4$UserRating),
+      "BoJack Horseman", 5, bh_5$UserRating[match(max(bh_5$series_ep), bh_5$series_ep)], median(bh_5$UserRating),
+      "Prison Break",    1, pb_1$UserRating[match(max(pb_1$series_ep), pb_1$series_ep)], median(pb_1$UserRating),
+      "Prison Break",    2, pb_2$UserRating[match(max(pb_2$series_ep), pb_2$series_ep)], median(pb_2$UserRating),
+      "Prison Break",    3, pb_3$UserRating[match(max(pb_3$series_ep), pb_3$series_ep)], median(pb_3$UserRating),
+      "Prison Break",    4, pb_4$UserRating[match(max(pb_4$series_ep), pb_4$series_ep)], median(pb_4$UserRating),
+      "Prison Break",    5, pb_5$UserRating[match(max(pb_5$series_ep), pb_5$series_ep)], median(pb_5$UserRating),
+      "Vikings",         1, vk_1$UserRating[match(max(vk_1$series_ep), vk_1$series_ep)], median(vk_1$UserRating),
+      "Vikings",         2, vk_2$UserRating[match(max(vk_2$series_ep), vk_2$series_ep)], median(vk_2$UserRating),
+      "Vikings",         3, vk_3$UserRating[match(max(vk_3$series_ep), vk_3$series_ep)], median(vk_3$UserRating),
+      "Vikings",         4, vk_4$UserRating[match(max(vk_4$series_ep), vk_4$series_ep)], median(vk_4$UserRating),
+      "Vikings",         5, vk_5$UserRating[match(max(vk_5$series_ep), vk_5$series_ep)], median(vk_5$UserRating)),
+    ncol = 4, 
+    byrow = TRUE))
+colnames(episodes_final) = c("series_name", "season", "UserRating", "median")
 ```
 
 Estamos interessado nas variáveis `UserRating` e `UserVotes`, principalmente.
@@ -139,6 +178,10 @@ Também, o resultado obtido indica as pessoas não tendem a se mobilizar mais pa
 ## O que as pessoas acham do final de cada temporada?
 
 ```{r}
-
+episodes_final %>%
+  mutate(season = as.character(season)) %>% 
+  ggplot(mapping = aes(x = median, y = UserRating, color = series_name)) + 
+  geom_point()
 ```
 
+Através do gráfico está evidenciado que os episódios de encerramento de uma temporada recebem melhores avaliações do que os episódios do restante da temporada costumam receber.
